--- a/css/default.css
+++ b/css/default.css
@@ -7153,7 +7153,7 @@ button.bg-dark:focus {
       left: -24px;
       width: 20px;
       height: 20px;
-      background: url("../img/svg/checked.svg");
+      background: url("../../img/svg/checked.svg");
 }
 
 .float-left {
