--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1060,7 +1060,8 @@ html {
     }
 
     .card-icon {
-        width: 35px
+        width: 35px;
+        height: auto;
     }
 
     .card-title {
