--- a/src/css/main.css
+++ b/src/css/main.css
@@ -706,7 +706,7 @@ html {
 }
 
 .description_critical {
-    background: url('../img/cbg.jpg');
+    background-color: #EBEBEB; 
     color: #000;
     border-radius: 20px;
     margin-top: -20px;
